--- a/finiteBeamDiffuse/postprocessing/finiteDiffuseBeam_me.tex
+++ b/finiteBeamDiffuse/postprocessing/finiteDiffuseBeam_me.tex
@@ -16,7 +16,7 @@ ymin=0.001,ymax=1,
 /pgfplots/xtick={2,4,6,8,12,20,30},
 ylabel={Error}
 ]
-\addlegendentry{macro RTLBM}
+\addlegendentry{mecro RTLBM}
 \addplot[mark=square*, color=black] table [x=mu_t, y=absMe1Normalized, col sep=comma] {finiteDiffuseAlbedo01.csv};
 \addplot[mark=square*, color=black] table [x=mu_t, y=absMe1Normalized, col sep=comma] {finiteDiffuseAlbedo04.csv};
 \addplot[mark=square*, color=black] table [x=mu_t, y=absMe1Normalized, col sep=comma] {finiteDiffuseAlbedo07.csv};
