color to KITcolors

--- a/finiteBeam/postprocessing/time/timeBar_b12.tex
+++ b/finiteBeam/postprocessing/time/timeBar_b12.tex
@@ -1,9 +1,8 @@
 \documentclass[class=minimal,border=0pt]{standalone}
 \usepackage{pgfplots,tikz}
 \pgfplotsset{compat=newest}
-\usetikzlibrary{patterns,pgfplots.colorbrewer}
-\pgfplotsset{colormap/Set1-5}
 \usepackage{amsmath,amssymb}
+\usepackage{KITcolors}
 \begin{document}
 \begin{tikzpicture}
 \begin{axis}[
@@ -16,12 +15,9 @@ legend entries={macro RTLBM, meso RTLBM},
 symbolic x coords = {0.1,0.4,0.7,0.9,1.0,1.9},
 xtick=data,
 ybar interval=0.8,
-cycle multi list={
-  [of colormap]
-}
 ]
-\addplot+[fill] table [x index=4, y index=1, col sep=comma] {mink160_12.csv};
-\addplot+[fill] table [x index=4, y index=1, col sep=comma] {mcHardy160_12.csv};
+\addplot+[KIT-Gruen,fill] table [x index=4, y index=1, col sep=comma] {mink160_12.csv};
+\addplot+[KIT-Blau,fill] table [x index=4, y index=1, col sep=comma] {mcHardy160_12.csv};
 \end{axis}
 \end{tikzpicture}
 \end{document}
